--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     implementation group: 'org.testng', name: 'testng', version: '6.9.10'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.10.0'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    implementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
 
 }
