--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,5 +9,6 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     implementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
     implementation group: 'com.beust', name: 'jcommander', version: '1.48'
+    implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.8'
 
 }
