--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.Test
+
 apply plugin: 'java'
 
 repositories {
@@ -12,4 +14,14 @@ dependencies {
     implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.8'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
 
+}
+task testGroups(type: Test) {
+    useTestNG{
+        suites 'src/test/resources/testNG-groups.xml'
+    }
+}
+task testContacts(type: Test) {
+    useTestNG{
+        suites 'src/test/resources/testNG-contacts.xml'
+    }
 }
