--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.5'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
 
 }
 task testGroups(type: Test) {
