--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.10.0'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     implementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
-    testImplementation project(path: ':')
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
+
 
 }
 test {
