--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     implementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
-
+    implementation group: 'commons-net', name: 'commons-net', version: '3.4'
 
 }
 test {
