--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -7,11 +7,14 @@ repositories {
 }
 dependencies {
     implementation group: 'org.testng', name: 'testng', version: '6.9.10'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.5'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.10.0'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     implementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
     implementation group: 'commons-net', name: 'commons-net', version: '3.4'
+    implementation group: 'org.subethamail', name: 'subethasmtp', version: '3.1.7'
+    implementation group: 'ru.lanwen.verbalregex', name: 'java-verbal-expressions', version: '1.8'
 
 }
 test {
