ДЗ №18: Реализовать тест для смены пароля в MantisBT

--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation group: 'commons-net', name: 'commons-net', version: '3.4'
     implementation group: 'org.subethamail', name: 'subethasmtp', version: '3.1.7'
     implementation group: 'ru.lanwen.verbalregex', name: 'java-verbal-expressions', version: '1.8'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
 
 }
 test {
