--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation group: 'ru.lanwen.verbalregex', name: 'java-verbal-expressions', version: '1.8'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
-
+    implementation group: 'biz.futureware.mantis', name: 'mantis-axis-soap-client', version: '1.2.19'
 }
 test {
     useTestNG{
