--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
-web.baseURL = http://localhost/addressbook/
+web.baseURL = http://192.168.137.1/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
-selenium.server = http://192.168.0.106:4444/wd/hub
+selenium.server = http://192.168.137.1:4444/wd/hub
